--- a/index.html
+++ b/index.html
@@ -4,9 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Silli Broschure</title>
+    <link rel="stylesheet" href="dist/spectre.min.css">
+    <link rel="stylesheet" href="dist/spectre-exp.min.css">
+    <link rel="stylesheet" href="dist/spectre-icons.min.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <title>Silli - Code Factory Cologne</title>
 </head>
 <body>
-    <h1>Hello from the Silli Broschure</h1>
+    <section class="hero">
+        <header class="navbar">
+            <section class="navbar-section">
+              <a href="..." class="navbar-brand mr-2">Spectre.css</a>
+            </section>
+            <section class="navbar-section">
+                <a href="..." class="btn btn-link">About</a>
+                <a href="..." class="btn btn-link">Ideas</a>
+                <a href="..." class="btn btn-link">Contact</a>
+            </section>
+          </header>
+          <div class="infoHero">
+            <h2>Let your Team grow</h2>
+            <p>Education in your hands.</p>
+            <button class="btn">Ideas</button>
+            <button class="btn">Contact</button>
+          </div>
+    </section>
+    <div id='content'>
+        <section class="ideas section">
+            <div class="heading">
+                <h3>About</h3>
+                <h5>What we do</h5>
+            </div>
+            <div class="gridSystem">
+                <div class="lt"></div>
+                <div class="rm"></div>
+                <div class="rt"></div>
+                <div class="lb"></div>
+                <div class="rb"></div>
+            </div>
+        </section>
+        <section class="about section">
+            <div class="heading">
+                <h3>Ideas</h3>
+                <h5>What we believe in</h5>
+            </div>
+            <div class="line">
+                <div class="infoBox">
+                    <i class="fas fa-book-reader"></i>
+                    <h6>Education how it was</h6>
+                    <p>Business relies on talented People and where do companies find them? Right. Eduactional Institutions like Schools and Universities produce our workers. Students are starting with the will to learn about some subject to be able to work within that field. They will continue learning for a couple of years and hopefully finally graduate as human resource. No?</p>
+                </div>
+                <div class="infoBox">
+                    <i class="fas fa-book-reader"></i>
+                    <h6>Education how it was</h6>
+                    <p>Business relies on talented People and where do companies find them? Right. Eduactional Institutions like Schools and Universities produce our workers. Students are starting with the will to learn about some subject to be able to work within that field. They will continue learning for a couple of years and hopefully finally graduate as human resource. No?</p>
+                </div>
+                <div class="infoBox">
+                    <i class="fas fa-book-reader"></i>
+                    <h6>Education how it was</h6>
+                    <p>Business relies on talented People and where do companies find them? Right. Eduactional Institutions like Schools and Universities produce our workers. Students are starting with the will to learn about some subject to be able to work within that field. They will continue learning for a couple of years and hopefully finally graduate as human resource. No?</p>
+                </div>
+            </div>
+        </section>
+        <section class="about section">
+            <div class="heading">
+                <h3>Contact</h3>
+                <h5>Got Ideas for your Business?</h5>
+            </div>
+            <div>
+                <input type="text" name="name">
+                <button>Next</button>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
