--- a/index.html
+++ b/index.html
@@ -72,11 +72,49 @@
                 <h3>Contact</h3>
                 <h5>Got Ideas for your Business?</h5>
             </div>
-            <div>
-                <input type="text" name="name">
-                <button>Next</button>
+            <div class="contact">
+                <form onkeypress="return event.key != 13;" class="form-group" action="http://www.formular-chef.de/fc.cgi" method="post" enctype="multipart/form-data">
+                    <input class="form-input" type="hidden" name="empfaenger" value="benediktmix@web.de"/>
+                    <input class="form-input" type="hidden" name="betreff" value="Kontaktformular Silli Broschure">
+                    <input type="submit" value="send">
+                </form>
+                <button id='next'>Next</button>
             </div>
         </section>
     </div>
+    <script>
+        var formStage = 0;
+        var form = document.querySelector('form');
+        var mailHTML = "<input class='form-input' name='absender' type='text' placeholder='your contact'>";
+        var nameHTML = "<input class='form-input' type='text' placeholder='what is your name?' name='name'>";
+        var subjectHTML = "<input class='form-input' type='text' placeholder='what is your Message about?' name='subject'>";
+        var textHTML = "<textarea class='form-input' type='text' placeholder='what is on your mind?' name='message'></textarea> <button>Submit</button>";
+        var inputs = [mailHTML, nameHTML, subjectHTML, textHTML]
+
+        const nextButton = document.getElementById('next');
+
+        function showElement(){
+            if(formStage === 3) {
+                nextButton.remove()
+            }
+            document.querySelector('form').innerHTML = inputs[formStage]
+        }
+
+        nextButton.addEventListener('click', () => {
+            // there is no 5th Possibility
+            if(formStage < 5){
+                // increase for showing next stage
+                formStage++;
+            }
+            // triggering HTML Switch
+            showElement();
+        });
+
+        // intitial input Field 
+        showElement(); 
+
+
+
+    </script>
 </body>
 </html>
