color scheme, footer, hero

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="hero">
         <header class="navbar">
             <section class="navbar-section">
-              <a href="..." class="navbar-brand mr-2">Spectre.css</a>
+              <a href="..." class="navbar-brand mr-2">Silli - Code Factory Cologne</a>
             </section>
             <section class="navbar-section">
                 <a href="..." class="btn btn-link">About</a>
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </section>
-        <section class="about section">
+        <section class="section">
             <div class="heading">
                 <h3>Contact</h3>
                 <h5>Got Ideas for your Business?</h5>
@@ -78,43 +78,17 @@
                     <input class="form-input" type="hidden" name="betreff" value="Kontaktformular Silli Broschure">
                     <input type="submit" value="send">
                 </form>
-                <button id='next'>Next</button>
+                <button class='button' id='next'>Next</button>
             </div>
         </section>
     </div>
-    <script>
-        var formStage = 0;
-        var form = document.querySelector('form');
-        var mailHTML = "<input class='form-input' name='absender' type='text' placeholder='your contact'>";
-        var nameHTML = "<input class='form-input' type='text' placeholder='what is your name?' name='name'>";
-        var subjectHTML = "<input class='form-input' type='text' placeholder='what is your Message about?' name='subject'>";
-        var textHTML = "<textarea class='form-input' type='text' placeholder='what is on your mind?' name='message'></textarea> <button>Submit</button>";
-        var inputs = [mailHTML, nameHTML, subjectHTML, textHTML]
-
-        const nextButton = document.getElementById('next');
-
-        function showElement(){
-            if(formStage === 3) {
-                nextButton.remove()
-            }
-            document.querySelector('form').innerHTML = inputs[formStage]
-        }
-
-        nextButton.addEventListener('click', () => {
-            // there is no 5th Possibility
-            if(formStage < 5){
-                // increase for showing next stage
-                formStage++;
-            }
-            // triggering HTML Switch
-            showElement();
-        });
-
-        // intitial input Field 
-        showElement(); 
-
-
-
-    </script>
+    <footer>
+        <ul>
+            <a href="">Impressum</a>
+            <a href="">Data Privacy</a>
+            <span>All Rights reserved - 2018</span>
+        </ul>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
