--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                     <p>Business relies on talented People and where do companies find them? Right. Eduactional Institutions like Schools and Universities produce our workers. Students are starting with the will to learn about some subject to be able to work within that field. They will continue learning for a couple of years and hopefully finally graduate as human resource. No?</p>
                 </div>
                 <div class="infoBox">
-                    <i class="fas fa-book-reader"></i>
-                    <h6>Education how it was</h6>
-                    <p>Business relies on talented People and where do companies find them? Right. Eduactional Institutions like Schools and Universities produce our workers. Students are starting with the will to learn about some subject to be able to work within that field. They will continue learning for a couple of years and hopefully finally graduate as human resource. No?</p>
+                    <i class="fas fa-cogs"></i>
+                    <h6>What did transform in personal Education</h6>
+                    <p>The Skillset of any Employee should not be a sure thing after the educational Period. Technology thrives every Industry and relies on a variety of Skill. Moreover on Skills that are used in modern processes. Employees attending at a school, university or a kind of apprenticeship should learn to learn and not use Tools and Techniques that werde modern 10 years ago.</p>
                 </div>
                 <div class="infoBox">
-                    <i class="fas fa-book-reader"></i>
-                    <h6>Education how it was</h6>
-                    <p>Business relies on talented People and where do companies find them? Right. Eduactional Institutions like Schools and Universities produce our workers. Students are starting with the will to learn about some subject to be able to work within that field. They will continue learning for a couple of years and hopefully finally graduate as human resource. No?</p>
+                    <i class="fas fa-id-card-alt"></i>
+                    <h6>The modern Way of Education</h6>
+                    <p>With the Knowledge of that fact. A Company should never stop improving their Employees Skills. In a Hiring Process the focus should be set on the will of the person to learn new skills and not simply test the Skills the person already has. Furthermore Companies have to find a process to determine, which Skills their Employees need in the Future to accomplish the Companies goals.</p>
                 </div>
             </div>
         </section>
