--- a/index.html
+++ b/index.html
@@ -37,11 +37,36 @@
                 <h5>What we do</h5>
             </div>
             <div class="gridSystem">
-                <div class="lt"></div>
-                <div class="rm"></div>
-                <div class="rt"></div>
-                <div class="lb"></div>
-                <div class="rb"></div>
+                <div class="lt">
+                    <div class="title">
+                        <h2>Digital Education</h2>
+                        <h5>Regular Courses for your Employees</h5>
+                    </div>
+                </div>
+                <div class="rm">
+                    <div class="title">
+                        <h2>Strategy</h2>
+                        <h5>Educational Systems</h5>
+                    </div>
+                </div>
+                <div class="rt">
+                    <div class="title">
+                        <h2>Hackathons</h2>
+                        <h5>Corporate Solutions</h5>
+                    </div>
+                </div>
+                <div class="lb">
+                    <div class="title">
+                        <h2>Workshops</h2>
+                        <h5>Technologies that matter</h5>
+                    </div>
+                </div>
+                <div class="rb">
+                    <div class="title">
+                        <h2>E-Learning</h2>
+                        <h5>Concepts that thrive</h5>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="about section">
@@ -89,6 +114,7 @@
             <span>All Rights reserved - 2018</span>
         </ul>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
