--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <ul>
             <a href="">Impressum</a>
             <a href="">Data Privacy</a>
-            <span>All Rights reserved - 2018</span>
+            <i>All Rights reserved - 2018</i>
         </ul>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
