--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
               <a href="..." class="navbar-brand mr-2">Silli - Code Factory Cologne</a>
             </section>
             <section class="navbar-section">
-                <a href="..." class="btn btn-link">About</a>
-                <a href="..." class="btn btn-link">Ideas</a>
-                <a href="..." class="btn btn-link">Contact</a>
+                <a href="#about" class="btn btn-link">About</a>
+                <a href="#ideas" class="btn btn-link">Ideas</a>
+                <a href="#contact" class="btn btn-link">Contact</a>
             </section>
           </header>
           <div class="infoHero">
@@ -33,7 +33,30 @@
           </div>
     </section>
     <div id='content'>
-        <section class="ideas section">
+        <section id='about' class="about section">
+            <div class="heading">
+                <h3>Ideas</h3>
+                <h5>What we believe in</h5>
+            </div>
+            <div class="line">
+                <div class="infoBox" data-aos='fade-up-right'>
+                    <i class="fas fa-book-reader"></i>
+                    <h6>Education how it was</h6>
+                    <p>Business relies on talented People and where do companies find them? Right. Eduactional Institutions like Schools and Universities produce our workers. Students are starting with the will to learn about some subject to be able to work within that field. They will continue learning for a couple of years and hopefully finally graduate as human resource. No?</p>
+                </div>
+                <div style="margin: 15em auto" class="infoBox" data-aos='fade-up-left'>
+                    <i class="fas fa-cogs"></i>
+                    <h6>What changed in personal Education</h6>
+                    <p>The Skillset of any Employee should not be a sure thing after the educational Period. Technology thrives every Industry and relies on a variety of Skill. Moreover on Skills that are used in modern processes. Employees attending at a school, university or a kind of apprenticeship should learn to learn and not use Tools and Techniques that werde modern 10 years ago.</p>
+                </div>
+                <div class="infoBox" data-aos='fade-up-right'>
+                    <i class="fas fa-id-card-alt"></i>
+                    <h6>The modern Way of Education</h6>
+                    <p>With the Knowledge of that fact. A Company should never stop improving their Employees Skills. In a Hiring Process the focus should be set on the will of the person to learn new skills and not simply test the Skills the person already has. Furthermore Companies have to find a process to determine, which Skills their Employees need in the Future to accomplish the Companies goals.</p>
+                </div>
+            </div>
+        </section>
+        <section id='ideas' class="ideas section">
             <div class="heading">
                 <h3>About</h3>
                 <h5>What we do</h5>
@@ -71,30 +94,7 @@
                 </div>
             </div>
         </section>
-        <section class="about section">
-            <div class="heading">
-                <h3>Ideas</h3>
-                <h5>What we believe in</h5>
-            </div>
-            <div class="line">
-                <div class="infoBox" data-aos='fade-up-right'>
-                    <i class="fas fa-book-reader"></i>
-                    <h6>Education how it was</h6>
-                    <p>Business relies on talented People and where do companies find them? Right. Eduactional Institutions like Schools and Universities produce our workers. Students are starting with the will to learn about some subject to be able to work within that field. They will continue learning for a couple of years and hopefully finally graduate as human resource. No?</p>
-                </div>
-                <div style="margin: 15em auto" class="infoBox" data-aos='fade-up-left'>
-                    <i class="fas fa-cogs"></i>
-                    <h6>What changed in personal Education</h6>
-                    <p>The Skillset of any Employee should not be a sure thing after the educational Period. Technology thrives every Industry and relies on a variety of Skill. Moreover on Skills that are used in modern processes. Employees attending at a school, university or a kind of apprenticeship should learn to learn and not use Tools and Techniques that werde modern 10 years ago.</p>
-                </div>
-                <div class="infoBox" data-aos='fade-up-right'>
-                    <i class="fas fa-id-card-alt"></i>
-                    <h6>The modern Way of Education</h6>
-                    <p>With the Knowledge of that fact. A Company should never stop improving their Employees Skills. In a Hiring Process the focus should be set on the will of the person to learn new skills and not simply test the Skills the person already has. Furthermore Companies have to find a process to determine, which Skills their Employees need in the Future to accomplish the Companies goals.</p>
-                </div>
-            </div>
-        </section>
-        <section class="section">
+        <section id='contact' class="section">
             <div class="heading">
                 <h3>Contact</h3>
                 <h5>Got Ideas for your Business?</h5>
