--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>CUJA</title>
+    <link rel="shortcut icon" type="image/png" href="./favicon.png">
 </head>
 <body>
     <section class="hero">
