--- a/index.html
+++ b/index.html
@@ -20,12 +20,20 @@
             <section class="navbar-section">
               <a href="./index.html"><div id='logo'></div></a>
             </section>
-            <section class="navbar-section">
+            <section id='links' class="navbar-section">
                 <a style='font-size: 1rem; padding-right: 2em;' href="#about" class="btn btn-link">Ideas</a>
                 <a style='font-size: 1rem; padding-right: 2em;' href="#ideas" class="btn btn-link">About</a>
-                <a style='font-size: 1rem;' href="#contact" class="btn btn-link">Contact</a>
+                <a style='font-size: 1rem; padding-right: 2em;' href="#contact" class="btn btn-link">Contact</a>
+                <a style='font-size: 1rem;' href="#contact" class="btn btn-link">Coding School</a>
             </section>
-          </header>
+            <div id="hamburger"><i class="fas fa-bars"></i></div>
+        </header>
+        <nav id="respNav">
+            <li><a style='font-size: 1rem; padding-right: 2em;' href="#about" class="btn btn-link">Ideas</a></li>
+            <li><a style='font-size: 1rem; padding-right: 2em;' href="#ideas" class="btn btn-link">About</a></li>
+            <li><a style='font-size: 1rem; padding-right: 2em;' href="#contact" class="btn btn-link">Contact</a></li>
+            <li><a style='font-size: 1rem;' href="#contact" class="btn btn-link">Coding School</a></li>
+        </nav>
           <div class="infoHero">
             <h2>Let your Team grow</h2>
             <p>Education in your hands.</p>
